--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Generate portfolio
       run: |
         python main.py
+
+    - name: Disable Jekyll
+      run: touch .nojekyll
         
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
